== Version 0.3.20 (tzdata v2010i) - 19-Apr-2010

* Updated to tzdata version 2010i
  (http://article.gmane.org/gmane.comp.time.tz/3202).


== Version 0.3.19 (tzdata v2010h) - 5-Apr-2010

* Updated to tzdata version 2010h
  (http://article.gmane.org/gmane.comp.time.tz/3188).


== Version 0.3.18 (tzdata v2010g) - 29-Mar-2010

* Updated to tzdata version 2010g
  (http://article.gmane.org/gmane.comp.time.tz/3172).


== Version 0.3.17 (tzdata v2010e) - 8-Mar-2010

* Updated to tzdata version 2010e
  (http://article.gmane.org/gmane.comp.time.tz/3128).


== Version 0.3.16 (tzdata v2009u) - 5-Jan-2010

* Support the use of '-' to denote '0' as an offset in the tz data files.
  Used for the first time in the SAVE field in tzdata v2009u.
* Updated to tzdata version 2009u
  (http://article.gmane.org/gmane.comp.time.tz/3053).


== Version 0.3.15 (tzdata v2009p) - 26-Oct-2009

* Updated to tzdata version 2009p
  (http://article.gmane.org/gmane.comp.time.tz/2953).
* Added a description to the gem spec.
* List test files in test_files instead of files in the gem spec.


== Version 0.3.14 (tzdata v2009l) - 19-Aug-2009

* Updated to tzdata version 2009l
  (http://article.gmane.org/gmane.comp.time.tz/2818).
* Include current directory in load path to allow running tests on
  Ruby 1.9.2, which doesn't include it by default any more.


== Version 0.3.13 (tzdata v2009f) - 15-Apr-2009

* Updated to tzdata version 2009f
  (http://article.gmane.org/gmane.comp.time.tz/2668).
* Untaint the timezone module filename after validation to allow use
  with $SAFE == 1 (e.g. under mod_ruby). Thanks to Dmitry Borodaenko for
  the suggestion. Closes #25349.


== Version 0.3.12 (tzdata v2008i) - 12-Nov-2008

* Updated to tzdata version 2008i
  (http://article.gmane.org/gmane.comp.time.tz/2440).


== Version 0.3.11 (tzdata v2008g) - 7-Oct-2008

* Updated to tzdata version 2008g
  (http://article.gmane.org/gmane.comp.time.tz/2335).
* Support Ruby 1.9.0-5. Rational.new! has now been removed in Ruby 1.9.