@@ -1,3 +1,9 @@
+== Version ?????? (tzdata v2010j) - ???????????
+
+* Updated to tzdata version 2010j
+  (http://article.gmane.org/gmane.comp.time.tz/3225).
+
+
 == Version 0.3.20 (tzdata v2010i) - 19-Apr-2010
 
 * Updated to tzdata version 2010i
